--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">باشگاه من</string>
     <string name="action_settings">Settings</string>
-    <string name="fars">بدون هیچ تردیدی نام درست جغرافیایی آن در طول تاریخ خلیج فارس است.در اسناد به جا مانده از بسیاری از تمدن‌های گذشته اینگونه بیان شده که سرزمینهای جنوب خلیج فارس که شامل قطر، شمال عمان، امارت متحده عربی، شرق عربستان و کویت می‌شده به ایران تعلق داشته‌اند و بنابراین خلیج فارس جزو آبهای داخلی ایران به حساب می‌آمده و به همین علت یونانیان به آن سینوس پریسیکوس گفته‌اند.
-
-چارلز بلگریو نماینده و کارگذار دولت بریتانیا در خلیج فارس، در سال ۱۹۳۵ نامه‌ای به دولت مطبوعش می‌نویسد و در آن ذکر می‌کند: «اکنون که تمام صفحات جنوبی خلیج فارس را عربی کرده‌ایم، خوب است نامش را هم عوض کنیم» ولی انگلستان که آن زمان بر سر نفت با ایران اختلاف داشت، این پیشنهاد را برای جلوگیری از تیره‌تر شدن روابط با تهران، نپذیرفت.</string>
+    <string name="fars">ای انجام حرکت جلو بازو دمبل تک دست لاری می‌توانید یا از یک میز شیب‌دار و یا دستگاه پریچراستفاده کنید. شیب میز باید روی زاویه 45 درجه تنظیم شده باشد. یک دمبل بردارید، پشت دستگاه یا میز شیب‌دار بایستید و دستی که دمبل در آن قرار دارد را روی پشتی قرار داده و کف دست را به طرف بیرون نگه دارید. پشت بازو را باید به پشتی دستگاه یا میز تکیه دهید و زیر بغل باید به لبه میز بچسبد. سپس به آرامی آرنج را خم کرده و دمبل را به طرف بالا تا نزدیک چانه بیاورید و بعد از یک مکث خیلی کوتاه دوباره دست را پایین ببرید.</string>
+    <string name="nameee">نام تمرین : جلو بازو میز لاری دمبل ○ نوع تمرین : قدرتی ○ عضلات اصلی : دو سر بازویی ○ عضلات کمکی : بازویی قدامی ، ساعد،مچ</string>
+    <string name="info">اطلاعات تمرین :</string>
+    <string name="howto">شیوه ی اجرا :</string>
 </resources>
